fixed header visibility
also make whole tile clickable

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,38 @@ md-content {
     background-color: #f5f5f5 !important;
 }
 
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px 10px;
+    z-index: 100;
+    background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 1)
+    );
+}
+
+footer > a {
+    margin: 0;
+    color: white;
+    text-shadow: 0 1px 0 black;
+    text-decoration: none;
+}
+
+a.fill-div {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 body > md-toolbar {
     z-index: 3;
 }
